// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute info renders correctly 1`] = `
<div
  className="wcpay-dispute-info"
>
  <div
    key="created"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Dispute date: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder="Nov 1, 2019"
        value="Nov 1, 2019"
      />
    </span>
  </div>
  <div
    key="amount"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Disputed amount: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder="$10.00 USD"
        value="$10.00 USD"
      />
    </span>
  </div>
  <div
    key="dueBy"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Respond by: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder="Nov 8, 2019 - 2:46AM"
        value="Nov 8, 2019 - 2:46AM"
      />
    </span>
  </div>
  <div
    key="reason"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Reason: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder="Fraudulent"
        value="Fraudulent"
      />
    </span>
  </div>
  <div
    key="order"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Order: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder={
          <OrderLink
            order={
              Object {
                "number": "1",
                "url": "http://test.local/order/1",
              }
            }
          />
        }
        value={
          <OrderLink
            order={
              Object {
                "number": "1",
                "url": "http://test.local/order/1",
              }
            }
          />
        }
      />
    </span>
  </div>
  <div
    key="customer"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Customer: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder="Mock Customer"
        value="Mock Customer"
      />
    </span>
  </div>
  <div
    key="transactionId"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Transaction ID: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        placeholder={
          <Link
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_mock"
            type="wc-admin"
          >
            ch_mock
          </Link>
        }
        value={
          <Link
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_mock"
            type="wc-admin"
          >
            ch_mock
          </Link>
        }
      />
    </span>
  </div>
</div>
`;

exports[`Dispute info renders loading state 1`] = `
<div
  className="wcpay-dispute-info"
>
  <div
    key="created"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Dispute date: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Created placeholder"
        value="Created placeholder"
      />
    </span>
  </div>
  <div
    key="amount"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Disputed amount: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Amount placeholder"
        value="Amount placeholder"
      />
    </span>
  </div>
  <div
    key="dueBy"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Respond by: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Due by placeholder"
        value="Due by placeholder"
      />
    </span>
  </div>
  <div
    key="reason"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Reason: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Reason placeholder"
        value="Reason placeholder"
      />
    </span>
  </div>
  <div
    key="order"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Order: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Order link placeholder"
        value="Order link placeholder"
      />
    </span>
  </div>
  <div
    key="customer"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Customer: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Customer placeholder"
        value="Customer placeholder"
      />
    </span>
  </div>
  <div
    key="transactionId"
  >
    <span
      className="wcpay-dispute-info-key"
    >
      Transaction ID: 
    </span>
    <span
      className="wcpay-dispute-info-value"
    >
      <Loadable
        display="inline"
        isLoading={true}
        placeholder="Transaction placeholder"
        value="Transaction placeholder"
      />
    </span>
  </div>
</div>
`;
